--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ categories = ["asynchronous", "os::macos-apis"]
 
 [dependencies]
 tokio = { workspace = true }
+apple-main-macros = { path = "macros" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 dispatch = { workspace = true }
