--- a/codesign-run/Cargo.toml
+++ b/codesign-run/Cargo.toml
@@ -2,7 +2,7 @@
 name = "codesign-run"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 description = "Codesign and run binaries for Apple frameworks"
 
 [dependencies]
