--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ dispatch = "0.2"
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "2", features = ["full"] }
+inventory = "0.3"
+libtest-mimic = "0.8"
 
 [package]
 name = "apple-main"
@@ -21,9 +23,15 @@ categories = ["asynchronous", "os::macos-apis"]
 [dependencies]
 tokio = { workspace = true }
 apple-main-macros = { path = "macros" }
+inventory = { workspace = true }
+libtest-mimic = { workspace = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 dispatch = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
+
+[[test]]
+name = "harness_integration"
+harness = false
