Update README with critical tokio::main warning and library integration guide
- Add clear warning that #[tokio::main] and #[tokio::test] will HANG
- Explain why: main dispatch queue needs CFRunLoop to drain it
- Update "When to Use What" table to recommend #[apple_main::main]
- Rewrite Testing section to emphasize harness_test requirement
- Add Library Integration section for multi-backend projects (like capsa)
- Add examples demonstrating the tokio::main vs apple_main::main behavior
- Add tokio "time" feature for timeout in examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [".", "macros", "codesign-run"]
 resolver = "2"
 
 [workspace.dependencies]
-tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
 dispatch = "0.2"
 proc-macro2 = "1"
 quote = "1"
