Add criterion feature with criterion_main! macro
Provides a drop-in replacement for Criterion's criterion_main! that
handles CFRunLoop setup automatically:

```rust
use apple_main::criterion::{criterion_group, Criterion};

fn bench(c: &mut Criterion) { ... }

criterion_group!(benches, bench);
apple_main::criterion_main!(benches);  // Just change this line!
```

On macOS, runs CFRunLoop on main thread while Criterion runs on
background thread, so on_main_sync() works in benchmarks.

Also:
- Add core-foundation dependency for macOS
- Re-export criterion when feature is enabled
- Fix flaky test that depended on test ordering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,20 @@ description = "Seamlessly integrate async Rust (tokio) with Apple's main-thread-
 keywords = ["apple", "macos", "tokio", "virtualization", "async"]
 categories = ["asynchronous", "os::macos-apis"]
 
+[features]
+default = []
+criterion = ["dep:criterion"]
+
 [dependencies]
 tokio = { workspace = true }
 apple-main-macros = { path = "macros" }
 inventory = { workspace = true }
 libtest-mimic = { workspace = true }
+criterion = { version = "0.5", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 dispatch = { workspace = true }
+core-foundation = "0.10"
 
 [dev-dependencies]
 tokio = { workspace = true }
