Initialize tokio runtime in criterion_main! macro
The criterion_main! macro was missing runtime initialization, causing
block_on() to panic with "runtime not initialized". Add init_runtime()
calls for both macOS and non-macOS code paths, matching the behavior
of test_main!. Add benchmark to prevent regression.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,8 @@ tokio = { workspace = true }
 [[test]]
 name = "harness_integration"
 harness = false
+
+[[bench]]
+name = "runtime_init"
+harness = false
+required-features = ["criterion"]
