Address feedback: sync fix, tests, docs, and auto-exit
- Replace 100ms sleep in criterion_main! with channel synchronization
- Add on_main_sync() test to harness_integration.rs
- Add proc macro tests for #[apple_main::test] and #[apple_main::main]
- Add threading model diagram and API guide to lib.rs and README
- Auto-exit when async main completes (no manual std::process::exit needed)
- Document that on_main() returns a Send future for async_trait compat

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,10 @@ tokio = { workspace = true }
 name = "harness_integration"
 harness = false
 
+[[test]]
+name = "main_macro"
+harness = false
+
 [[bench]]
 name = "runtime_init"
 harness = false
