Add unstable-test-framework feature and devenv profiles
Add support for Rust's unstable custom_test_frameworks feature to
eliminate the need for test_main!() and harness = false on nightly.

Changes:
- Add unstable-test-framework feature that enables #[test_case] markers
- Add test_runner function for use with #![test_runner(...)]
- Set up devenv profiles for stable and nightly Rust toolchains
- Update CI to run job matrix on both stable and nightly
- Document the nightly-only feature in README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ env:
 jobs:
   check:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        profile: [stable, nightly]
+    name: check (${{ matrix.profile }})
     steps:
       - uses: actions/checkout@v4
 
@@ -25,13 +29,17 @@ jobs:
         run: nix profile install nixpkgs#devenv
 
       - name: Check formatting
-        run: devenv shell cargo fmt --all -- --check
+        run: devenv --profile ${{ matrix.profile }} shell cargo fmt --all -- --check
 
       - name: Run clippy
-        run: devenv shell cargo clippy --workspace --all-targets -- -D warnings
+        run: devenv --profile ${{ matrix.profile }} shell cargo clippy --workspace --all-targets -- -D warnings
 
       - name: Run tests
-        run: devenv shell cargo test --workspace
+        run: devenv --profile ${{ matrix.profile }} shell cargo test --workspace
+
+      - name: Run unstable-test-framework tests (nightly only)
+        if: matrix.profile == 'nightly'
+        run: devenv --profile ${{ matrix.profile }} shell cargo test --features unstable-test-framework --test unstable_framework
 
       - name: Run benchmark smoke test
-        run: devenv shell cargo bench --features criterion --bench runtime_init -- --test
+        run: devenv --profile ${{ matrix.profile }} shell cargo bench --features criterion --bench runtime_init -- --test
