--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -8,6 +8,10 @@ description = "Procedural macros for apple-main"
 [lib]
 proc-macro = true
 
+[features]
+default = []
+unstable-test-framework = []
+
 [dependencies]
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
