--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ categories = ["asynchronous", "os::macos-apis"]
 default = []
 criterion = ["dep:criterion"]
 unstable-test-framework = ["apple-main-macros/unstable-test-framework"]
+unstable-criterion-framework = ["criterion", "dep:criterion-macro"]
 
 [dependencies]
 tokio = { workspace = true }
@@ -31,6 +32,7 @@ apple-main-macros = { path = "macros" }
 inventory = { workspace = true }
 libtest-mimic = { workspace = true }
 criterion = { version = "0.5", optional = true }
+criterion-macro = { version = "0.4", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 dispatch = { workspace = true }
@@ -55,3 +57,7 @@ required-features = ["unstable-test-framework"]
 name = "runtime_init"
 harness = false
 required-features = ["criterion"]
+
+[[bench]]
+name = "unstable_criterion"
+required-features = ["unstable-criterion-framework"]
